# fws-rs

./: Cargo.toml  README.md  example.json  todo.todo
.cargo/: config.toml
.config/: future.json  observer.json
commands/: server.py
hooky/: Cargo.toml  README.md  watch.json
hooky/src/: cli.rs  command.rs  config.rs  file.rs  lib.rs  main.rs  watch.json  watcher.rs
hooky/tests/: commands.rs  intervals.rs
hooky/tests/functions/: bad.py  input.py  main.py
src/: cli.rs  config.rs  error.rs  events.rs  file.rs  main.rs  observer.rs  structs.rs
utils/: Cargo.toml
utils/src/: lib.rs
