[package]
name = "fws-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.93"
walkdir = "2.3.2"
subprocess = "0.2.9"
ctrlc = "3.2.5"
lazy_static = "1.4.0"
clap = { version = "4.1.6", features = ["derive"] }

[dependencies.serde]  # Add serde in its own section.
features = ["derive"] # We'll need the derive feature.
version = "1.0.152"
